# OpenCRC

./: .gitignore  CMakeLists.txt  README.md  color.c  crc.c  crc.h  font_ansi_shadow.c  font_ansi_shadow.h  help.c  help.h  ht.c  ht.h  main.c
.github/workflows/: release.yml
